Changelog
=========

1.7.3 - Unreleased
------------------

- Add querywidget to theme layers. This is requried by new style collections.
  [Vitaliy Podoba]


1.7.2 - May 29, 2013
--------------------

- Fixes bug in lazy portlets load [7483].
  [Jose Dinuncio]

- Fixes bug in zimbra viewlet after upgrade to Zimbra 8.
  [Jose Dinuncio]

- Add Following Functionality to user profile pages.
  [Vitaliy Podoba]

- slimScroll attach to deferred portlets, spinner animation centering, template adjust.
  [Cesar Gonzalez]

- Fixes translation of Display menu and global bar.
  [Jose Dinuncio]

- Remove wrong TOC entry "Bookmark & Share". TOC positioning at top. Format TOC levels.
  [Cesar Gonzalez]

- Modifies dashboard's portlets to make a deferred render.
  [Jose Dinuncio]

- Fixes Create Task overlay style. Add box-sizing to textarea in overlays.
  [Cesar Gonzalez]


1.7.1 - April 19, 2013
----------------------

- Fixes Cancel icon button on insert media.
  [Cesar Gonzalez]

- Fixes step 2 wizard error in required field.
  [Cesar Gonzalez]

- Fixes upgrade step source number in configure.zcml.
  [Cesar Gonzalez]

- Current folder is the default destination for "Create Wizard".
  [Jose Dinuncio]

- Fixes "File Under" tags position.
  [Cesar Gonzalez]

- Makes "Create New" wizard tree selector lazy.
  [Jose Dinuncio]

- Changes Tree Navigation style -Home button design update-.
  [Cesar Gonzalez]

- Applies layout for Document content type (Wiki), add shadow image.
  [Cesar Gonzalez]

- Display only Group Portlets on our home dashboard view.
  [Vitaliy Podoba]


1.7 - March 20, 2013
--------------------

- Fixes bug in livesearch_reply.py.
  [Jose Dinuncio]

- Adds method post_and-index_object to replace WSAPI's post_object.
  [Jose Dinuncio]

1.6.9 - March 6, 2013
---------------------

- Fixes livesearch style when no result found, add collection icon to sprite.
  [Cesar Gonzalez]

- Adds viewlet for custom favicon links & apple touch icons links.
  [Cesar Gonzalez]
